# lidb

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  li-toolchain.toml  li.toml
.github/: repo-description
.github/workflows/: ci.yml  ph-db-gate.yml  ph-db-reusable-embed.yml
docker/: Dockerfile.embed
docs/: architecture-native-li.md  auditability.md  auth-rls.md  changefeed.md  ci-ph-db-gate.md  footprint.md  handoff-wp5-lis.md  learned-from.md  liq-spec.md  liq-token-efficiency-audit.md  pg-subset-v1.md  ph-db-4-registry-gap.md
docs/release-notes/: 2026-05-25-agent-kit-1.3.3-wp-b2.md  2026-05-25-architecture-native-li.md  2026-05-25-github-description-seo.md  2026-05-25-lidb-changefeed-api.md  2026-05-25-lidb-learned-from.md  2026-05-25-lidb-native-integration-main.md  2026-05-25-liq-token-efficiency-audit.md  2026-05-25-ph-db-1-engine-skeleton.md  2026-05-25-ph-db-2-liorm-impl.md  2026-05-25-ph-db-3-1-sqlite-cutover.md  2026-05-25-ph-db-3-liorm-engine-wire.md  2026-05-25-ph-db-5-rls-jwt.md  2026-05-25-ph-db-n1-native-storage.md  2026-05-25-ph-db-native-sql-li.md  2026-05-25-ph-db-security-audit-harness.md  2026-05-25-tier-db-measured-csv.md  2026-05-26-ph-db-4-registry-oltp.md
docs/research/: multi-model-gpu.md
engine/: buffer_pool.cpp  changefeed.cpp  changefeed_c.cpp  embedded.cpp  heap.cpp  native_catalog.cpp  native_exec.cpp  wal.cpp
engine/cli/: embed_main.cpp
engine/tests/: changefeed_smoke.cpp
liorm/: README.md  __init__.py  audit.py  capabilities.py  catalog.py  embed_engine.py  errors.py  execute.py
liq/: README.md  __init__.py  compiler.py  errors.py  parser.py
migrations/: 001_registry.sql  001_registry_embedded.sql  002_rls_registry.sql  003_control_plane.sql  003_registry_v2_publish.sql  004_auth_tokens.sql
migrations/archive/: 002_control_plane_embedded.sql
registry/: __init__.py  bootstrap.py  plans.py  service.py
scripts/: audit_probe.py  changefeed_smoke.sh  check_no_sqlite.sh  ci_ph_db_gate.sh  ensure_embed.sh  registry_smoke.sh  run_audit_suite.sh  run_tests.sh  security_probe.py  set-default-branch-main.sh  smoke.sh  sync-agent-kit.sh
scripts/bench/: common.sh  emit_csv.py  harness_emit.py  memory_footprint.sh  parallel_load.sh  registry_oltp.sh  tier_db_csv.sh  (+3 more)
src/: storage_smoke.cpp
tests/: conftest.py  test_capabilities.py  test_compiler.py  test_control_plane_schema.py  test_embed_engine.py  test_execute.py  test_liq_readme_spec_examples.py  test_native_sql.py  test_parser.py  test_registry_oltp.py
(+28 files in other folders)
